--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -26,15 +27,15 @@
         <div class="container">
 
             <header class="box">
-                <nav class="nav_main col_4 block">
-                    <a href="index.html">Bike Sharing Programs</a>
-                    <a href="measures.html">Measures</a>
-                    <a href="about.html">About</a>
-                </nav>
-
-                <div class="title col_4 block">
+                <div class="title col_2 block">
                     <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
                 </div>
+
+                <nav class="nav_main col_2 block">
+                    <li>Overview</li>
+                    <li><a href="measures.html">Measures</a></li>
+                    <li><a href="about.html">About</a></li>
+                </nav>
             </header>
 
             <div class="body box">
@@ -46,6 +47,7 @@
                     </div>
                 </section>
                 
+                <!-- all programs graphs listed here -->
                 <section class="graph_container">
                     <div class="col_1 block graph_legend"><h4>legend</h4><img src="img/legend_chart.svg"></div>
                     <div class="col_1 block city_graph"><a href="programs/austin.html"><h4>Austin, TX</h4><img src="img/chart/austin_chart.svg"></a></div>
