--- a/measures.html
+++ b/measures.html
@@ -29,15 +29,15 @@
         <div class="container">
 
             <header class="box">
-                <nav class="nav_main col_4 block">
-                    <a href="index.html">Bike Sharing Programs</a>
-                    <a href="measures.html">Measures</a>
-                    <a href="about.html">About</a>
-                </nav>
-
-                <div class="title col_4 block">
+                <div class="title col_2 block">
                     <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
                 </div>
+
+                <nav class="nav_main col_2 block">
+                    <li><a href="index.html">Overview</li>
+                    <li>Measures</li>
+                    <li><a href="about.html">About</a></li>
+                </nav>
             </header>
 
             <div class="body box">
