--- a/programs/_template.html
+++ b/programs/_template.html
@@ -25,14 +25,14 @@
         <div class="container">
 
             <header class="box">
-                <nav class="nav_main col_4 block">
-                    <a href="../index.html">Bike Sharing Programs</a>
-                    <a href="../measures.html">Measures</a>
-                    <a href="../about.html">About</a>
-                </nav>
-                <div class="title col_4 block">
-                    <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
+                <div class="title col_2 block">
+                    <h1>COMPARISON<br/>OF BIKE SHARING PROGRAMS IN<br/>SELECT U.S. CITIES</h1>
                 </div>
+                <nav class="nav_main col_2 block">
+                    <li><a href="../index.html">Overview</a></li>
+                    <li><a href="../measures.html">Measures</a></li>
+                    <li><a href="../about.html">About</a></li>
+                </nav>
             </header>
 
             <div class="body box">
@@ -69,63 +69,63 @@
                                 <th colspan="2">Cost</th>
                             </tr>
                             <tr>
-                                <td width="226px">Annual Membership Cost</td>
+                                <td class="table_left_col" width="226px">Annual Membership Cost</td>
+                                <td width="226px">$###</td>
+                            </tr>
+                            <tr>
+                                <td class="table_left_col">Cost per Station (annual)</td>
                                 <td>$###</td>
                             </tr>
                             <tr>
-                                <td>Cost per Station (annual)</td>
-                                <td>$###</td>
-                            </tr>
-                            <tr>
-                                <td>Cost per Square Mile</td>
+                                <td class="table_left_col">Cost per Square Mile</td>
                                 <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
-                                <td>Bike</td>
+                                <td class="table_left_col">Bike</td>
                                 <td>###</td>
                             </tr>
                             <tr>
-                                <td>Station</td>
+                                <td class="table_left_col">Station</td>
                                 <td>###</td>
                             </tr>
                             <tr>
-                                <td>Stations per Square Mile</td>
+                                <td class="table_left_col">Stations per Square Mile</td>
                                 <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
-                                <td>System Area</td>
+                                <td class="table_left_col">System Area</td>
                                 <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
-                                <td>Bike Trips (annual)</td>
+                                <td class="table_left_col">Bike Trips (annual)</td>
                                 <td>###</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day <br/>(average)</td>
+                                <td class="table_left_col">Bike Trips per Day <br/>(average)</td>
                                 <td>###</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day per Bike (average)</td>
+                                <td class="table_left_col">Bike Trips per Day per Bike (average)</td>
                                 <td>###</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
-                                <td>Inhabitants</td>
+                                <td class="table_left_col">Inhabitants</td>
                                 <td>###</td>
                             </tr>
                             <tr>
-                                <td>Inhabitants per Bike</td>
+                                <td class="table_left_col">Inhabitants per Bike</td>
                                 <td>###</td>
                             </tr>
                         </table>
@@ -137,7 +137,7 @@
                 <!--  BOTTOM LINKS  -->
                 <section class="bottom_links">
 
-                    <h4 class="col_4 block">Other Cities</h4>
+                    <h4 class="col_4 block">Program List</h4>
                     
                     
                     <div class="col_2 block">
@@ -153,7 +153,6 @@
 
                     <div class="col_2 block">
                         <ul>
-                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                             <li><a href="houston.html">Houston | Houston B-Cycle</a></li>
                             <li><a href="minneapolis.html">Minneapolis | Niceride Minnesota</a></li>
                             <li><a href="newyork.html">New York | Citi Bike</a></li>
