--- a/programs/boston.html
+++ b/programs/boston.html
@@ -25,14 +25,14 @@
         <div class="container">
 
             <header class="box">
-                <nav class="nav_main col_4 block">
-                    <a href="../index.html">Bike Sharing Programs</a>
-                    <a href="../measures.html">Measures</a>
-                    <a href="../about.html">About</a>
-                </nav>
-                <div class="title col_4 block">
-                    <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
+                <div class="title col_2 block">
+                    <h1>COMPARISON<br/>OF BIKE SHARING PROGRAMS IN<br/>SELECT U.S. CITIES</h1>
                 </div>
+                <nav class="nav_main col_2 block">
+                    <li><a href="../index.html">Overview</a></li>
+                    <li><a href="../measures.html">Measures</a></li>
+                    <li><a href="../about.html">About</a></li>
+                </nav>
             </header>
 
             <div class="body box">
@@ -40,7 +40,7 @@
                 <section class="section_title">
                     <div class="col_2 block"><h2>Hubway Boston</h2></div>
                     <div class="col_2 block">
-                        <p>BOSTON, MA || 7.28.2011 || <a href="https://www.thehubway.com/">Official Website</a></p>
+                        <p>BOSTON, MA || 7.28.2011 || <a target="_blank" href="https://www.thehubway.com/">Official Website</a></p>
                     </div>
                 </section>
 
@@ -69,68 +69,68 @@
                                 <th colspan="2">Cost</th>
                             </tr>
                             <tr>
-                                <td width="226px">Annual Membership Cost</td>
-                                <td>$85</td>
+                                <td class="table_left_col" width="226px">Annual Membership Cost</td>
+                                <td width="226px">$85</td>
                             </tr>
                             <tr>
-                                <td>Cost per Station (annual)</td>
+                                <td class="table_left_col">Cost per Station (annual)</td>
                                 <td>$0.61</td>
                             </tr>
                             <tr>
-                                <td>Cost per Square Mile</td>
+                                <td class="table_left_col">Cost per Square Mile</td>
                                 <td>$4.25</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
-                                <td>Bike</td>
+                                <td class="table_left_col">Bike</td>
                                 <td>1,300</td>
                             </tr>
                             <tr>
-                                <td>Station</td>
+                                <td class="table_left_col">Station</td>
                                 <td>140</td>
                             </tr>
                             <tr>
-                                <td>Stations per Square Mile</td>
+                                <td class="table_left_col">Stations per Square Mile</td>
                                 <td>7</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
-                                <td>System Area</td>
+                                <td class="table_left_col">System Area</td>
                                 <td>20 mi<sup>2</sup></td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
-                                <td>Bike Trips (annual)</td>
+                                <td class="table_left_col">Bike Trips (annual)</td>
                                 <td>1,000,000</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day <br/>(average)</td>
+                                <td class="table_left_col">Bike Trips per Day <br/>(average)</td>
                                 <td>4,167</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day per Bike (average)</td>
+                                <td class="table_left_col">Bike Trips per Day per Bike (average)</td>
                                 <td>3.2</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
-                                <td>Inhabitants</td>
+                                <td class="table_left_col">Inhabitants</td>
                                 <td>753,445</td>
                             </tr>
                             <tr>
-                                <td>Inhabitants per Bike</td>
+                                <td class="table_left_col">Inhabitants per Bike</td>
                                 <td>580</td>
                             </tr>
                         </table>
                         <br>
-                        <p><strong>Additional Information</strong>
+                        <p style="text-align: center;"><strong>Additional Information</strong>
                             <br>Includes Cambridge, MA</p>
                     </div>
 
@@ -140,12 +140,12 @@
                 <!--  BOTTOM LINKS  -->
                 <section class="bottom_links">
 
-                    <h4 class="col_4 block">Other Cities</h4>
-                    
+                    <h4 class="col_4 block">Program List</h4>
                     
                     <div class="col_2 block">
                         <ul>
                             <li><a href="austin.html">Austin | Austin B-Cycle</a></li>
+                            <li>Boston | Hubway Boston</li>
                             <li><a href="chattanooga.html">Chattanooga | Bike Chattanooga</a></li>
                             <li><a href="chicago.html">Chicago | Divvy Bikes</a></li>
                             <li><a href="columbus.html">Columbus | Cogo Bike Share</a></li>
