--- a/programs/washington.html
+++ b/programs/washington.html
@@ -25,14 +25,14 @@
         <div class="container">
 
             <header class="box">
-                <nav class="nav_main col_4 block">
-                    <a href="../index.html">Bike Sharing Programs</a>
-                    <a href="../measures.html">Measures</a>
-                    <a href="../about.html">About</a>
-                </nav>
-                <div class="title col_4 block">
-                    <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
+                <div class="title col_2 block">
+                    <h1>COMPARISON<br/>OF BIKE SHARING PROGRAMS IN<br/>SELECT U.S. CITIES</h1>
                 </div>
+                <nav class="nav_main col_2 block">
+                    <li><a href="../index.html">Overview</a></li>
+                    <li><a href="../measures.html">Measures</a></li>
+                    <li><a href="../about.html">About</a></li>
+                </nav>
             </header>
 
             <div class="body box">
@@ -40,7 +40,7 @@
                 <section class="section_title">
                     <div class="col_2 block"><h2>Capital Bikeshare</h2></div>
                     <div class="col_2 block">
-                        <p>WASHINGTON, DC || 9.20.2010 || <a href="http://www.bayareabikeshare.com/">Official Website</a></p>
+                        <p>WASHINGTON, DC || 9.20.2010 || <a target="_blank" href="http://www.bayareabikeshare.com/">Official Website</a></p>
                     </div>
                 </section>
 
@@ -69,68 +69,68 @@
                                 <th colspan="2">Cost</th>
                             </tr>
                             <tr>
-                                <td width="226px">Annual Membership Cost</td>
-                                <td>$84</td>
+                                <td class="table_left_col" width="226px">Annual Membership Cost</td>
+                                <td width="226px">$84</td>
                             </tr>
                             <tr>
-                                <td>Cost per Station (annual)</td>
+                                <td class="table_left_col">Cost per Station (annual)</td>
                                 <td>$0.28</td>
                             </tr>
                             <tr>
-                                <td>Cost per Square Mile</td>
+                                <td class="table_left_col">Cost per Square Mile</td>
                                 <td>$1.34</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Convenience</th>
                             </tr>
                             <tr>
-                                <td>Bike</td>
+                                <td class="table_left_col">Bike</td>
                                 <td>2,500</td>
                             </tr>
                             <tr>
-                                <td>Station</td>
+                                <td class="table_left_col">Station</td>
                                 <td>300</td>
                             </tr>
                             <tr>
-                                <td>Stations per Square Mile</td>
+                                <td class="table_left_col">Stations per Square Mile</td>
                                 <td>4.8</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Area</th>
                             </tr>
                             <tr>
-                                <td>System Area</td>
+                                <td class="table_left_col">System Area</td>
                                 <td>62.5</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>Activity</th>
                             </tr>
                             <tr>
-                                <td>Bike Trips (annual)</td>
+                                <td class="table_left_col">Bike Trips (annual)</td>
                                 <td>2,891,245</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day <br/>(average)</td>
+                                <td class="table_left_col">Bike Trips per Day <br/>(average)</td>
                                 <td>7,921</td>
                             </tr>
                             <tr>
-                                <td>Bike Trips per Day per Bike (average)</td>
+                                <td class="table_left_col">Bike Trips per Day per Bike (average)</td>
                                 <td>3.2</td>
                             </tr>
                             <tr>
                                 <th colspan="2"><br/>System Size</th>
                             </tr>
                             <tr>
-                                <td>Inhabitants</td>
+                                <td class="table_left_col">Inhabitants</td>
                                 <td>873,595</td>
                             </tr>
                             <tr>
-                                <td>Inhabitants per Bike</td>
+                                <td class="table_left_col">Inhabitants per Bike</td>
                                 <td>349</td>
                             </tr>
                         </table>
                         <br>
-                        <p><strong>Additional Information</strong>
+                        <p style="text-align: center;"><strong>Additional Information</strong>
                             <br>Includes Arlington, VA</p>
                     </div>
 
@@ -140,8 +140,7 @@
                 <!--  BOTTOM LINKS  -->
                 <section class="bottom_links">
 
-                    <h4 class="col_4 block">Other Cities</h4>
-                    
+                    <h4 class="col_4 block">Program List</h4>
                     
                     <div class="col_2 block">
                         <ul>
@@ -150,16 +149,17 @@
                             <li><a href="chattanooga.html">Chattanooga | Bike Chattanooga</a></li>
                             <li><a href="chicago.html">Chicago | Divvy Bikes</a></li>
                             <li><a href="columbus.html">Columbus | Cogo Bike Share</a></li>
+                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                         </ul>
                     </div>
 
                     <div class="col_2 block">
                         <ul>
-                            <li><a href="denver.html">Denver | Denver B-Cycle</a></li>
                             <li><a href="houston.html">Houston | Houston B-Cycle</a></li>
                             <li><a href="minneapolis.html">Minneapolis | Niceride Minnesota</a></li>
                             <li><a href="newyork.html">New York | Citi Bike</a></li>
                             <li><a href="sanfrancisco.html">San Francisco Bay Area | Bay Area Bike Share</a></li>
+                            <li>Washington DC | Captial Bikeshare</li>
                         </ul>
                     </div>
 
