edits in link styles and program dot maps

--- a/programs/_template.html
+++ b/programs/_template.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
         <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -26,7 +27,7 @@
 
             <header class="box">
                 <div class="title col_2 block">
-                    <h1>COMPARISON<br/>OF BIKE SHARING PROGRAMS IN<br/>SELECT U.S. CITIES</h1>
+                    <h1>COMPARISON OF<br/>BIKE SHARING PROGRAMS<br/>IN SELECT U.S. CITIES</h1>
                 </div>
                 <nav class="nav_main col_2 block">
                     <li><a href="../index.html">Overview</a></li>
