added legends & edited style

--- a/measures.html
+++ b/measures.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <nav class="nav_main col_2 block">
-                    <li><a href="index.html">Overview</li>
+                    <li><a href="index.html">Overview</a></li>
                     <li>Measures</li>
                     <li><a href="about.html">About</a></li>
                 </nav>
@@ -65,7 +65,7 @@
                     <!-- COST -->
                     <section class="category_text">
                         <div class="col_3 block">
-                            <h3><a name="cost">Cost</a></h2>
+                            <h3><a name="cost">Cost</a></h3>
                         </div>
                         <div class="col_2 block">
                             <p><strong>Scoring System</strong> 
@@ -88,7 +88,7 @@
                     <!-- CONVENIENCE -->
                     <section class="category_text">
                         <div class="col_3 block">
-                            <h3><a name="convenience">Convenience</a></h2>
+                            <h3><a name="convenience">Convenience</a></h3>
                         </div>
                         <div class="col_2 block">
                             <p><strong>Scoring System</strong> 
@@ -111,7 +111,7 @@
                     <!-- SYSTEM AREA -->
                     <section class="category_text">
                         <div class="col_3 block">
-                            <h3><a name="area">System Area</a></h2>
+                            <h3><a name="area">System Area</a></h3>
                         </div>
                         <div class="col_2 block">
                             <p><strong>Scoring System</strong> 
@@ -132,7 +132,7 @@
                     <!-- ACTIVITY -->
                     <section class="category_text">
                         <div class="col_3 block">
-                            <h3><a name="activity">Activity</a></h2>
+                            <h3><a name="activity">Activity</a></h3>
                         </div>
                         <div class="col_2 block">
                             <p><strong>Scoring System</strong> 
@@ -153,7 +153,7 @@
                     <!-- SYSTEM SIZE -->
                     <section class="category_text">
                         <div class="col_3 block">
-                            <h3><a name="system_size">System Size</a></h2>
+                            <h3><a name="system_size">System Size</a></h3>
                         </div>
                         <div class="col_2 block">
                             <p><strong>Scoring System</strong> 
