--- a/programs/austin.html
+++ b/programs/austin.html
@@ -39,7 +39,7 @@
             <div class="body box">
 
                 <section class="section_title">
-                    <div class="col_2 block"><h2>Austin B-cycle</h2></div>
+                    <div class="col_2 block"><h2>Austin B-cycle</h2><span id="filler"></span</div>
                     <div class="col_2 block">
                         <p>AUSTIN, TX || 12.21.2013 || <a target="_blank" href="https://austin.bcycle.com/m">Official Website</a></p>
                     </div>
