--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <section class="intro_text">
                     <div class="col_2 block"><img src="img/us_map/us_dot_map_all.svg"></div>
                     <div class="col_2 block">
-                        <p>The topic of bike sharing grew out of personal interest of Parsons Institute for Information Mapping (PIIM) visiting researcher, Luca Nitchke.  As his work is largely focused on urban development, the political and social aspects of bike sharing was a rich topic that could be examined in a deeper way. Little scientific work has been done on bike sharing, especially with a direct focus on comparing the many systems across the nation. PIIM’s New York City location, shared interest in the topic, and the active debate around CitiBike taking place in the city created an excellent opportunity for this project.</p>
+                        <p>The topic of bike sharing grew out of personal interest of <a target="_blank" href=''>Parsons Institute for Information Mapping</a> (PIIM) visiting researcher, Luca Nitchke.  As his work is largely focused on urban development, the political and social aspects of bike sharing was a rich topic that could be examined in a deeper way. Little scientific work has been done on bike sharing, especially with a direct focus on comparing the many systems across the nation. PIIM’s New York City location, shared interest in the topic, and the active debate around CitiBike taking place in the city created an excellent opportunity for this project.</p>
                     </div>
                 </section>
                 
