made edits to header styling

--- a/about.html
+++ b/about.html
@@ -33,15 +33,15 @@
                 <nav class="nav_main col_2 block">
                     <li><a href="index.html">Overview</a></li>
                     <li><a href="measures.html">Measures</a></li>
-                    <li>About</li>
+                    <li><strong>About</strong></li>
                 </nav>
             </header>
 
             <div class="body box">
 
                 <section class="intro_text">
-                    <div class="col_4 block">
-                        <h2>More Information</h2>
+                    <div class="col_4 block about_title">
+                        <h2>More Information</h2><div class="title_bar"></div>
                     </div>
                 </section>
 
