--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <nav class="nav_main col_2 block">
-                    <li>Overview</li>
+                    <li><strong>Overview</strong></li>
                     <li><a href="measures.html">Measures</a></li>
                     <li><a href="about.html">About</a></li>
                 </nav>
@@ -50,17 +50,17 @@
                 <!-- all programs graphs listed here -->
                 <section class="graph_container">
                     <div class="col_1 block graph_legend"><h4>legend</h4><img src="img/legend_chart.svg"></div>
-                    <div class="col_1 block city_graph"><a href="programs/austin.html"><h4>Austin, TX</h4><img src="img/chart/austin_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/boston.html"><h4>Boston, MA</h4><img src="img/chart/boston_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/chattanooga.html"><h4>Chattanooga, TN</h4><img src="img/chart/chattanooga_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/chicago.html"><h4>Chicago, IL</h4><img src="img/chart/chicago_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/columbus.html"><h4>Columbus, OH</h4><img src="img/chart/columbus_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/denver.html"><h4>Denver, CO</h4><img src="img/chart/denver_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/houston.html"><h4>Houston, TX</h4><img src="img/chart/houston_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/minneapolis.html"><h4>Minneapolis, MN</h4><img src="img/chart/minneapolis_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/newyork.html"><h4>New York, NY</h4><img src="img/chart/ny_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/sanfrancisco.html"><h4>San Francisco <br/>Bay Area, CA</h4><img style="margin-top: -20px" src="img/chart/sanfran_chart.svg"></a></div>
-                    <div class="col_1 block city_graph"><a href="programs/washington.html"><h4>Washington, DC</h4><img src="img/chart/washington_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/austin.html"><h4>Austin, TX</h4><div class="city_name_bar austin"></div><img src="img/chart/austin_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/boston.html"><h4>Boston, MA</h4><div class="city_name_bar boston"></div><img src="img/chart/boston_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/chattanooga.html"><h4>Chattanooga, TN</h4><div class="city_name_bar chattanooga"></div><img src="img/chart/chattanooga_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/chicago.html"><h4>Chicago, IL</h4><div class="city_name_bar chicago"></div><img src="img/chart/chicago_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/columbus.html"><h4>Columbus, OH</h4><div class="city_name_bar columbus"></div><img src="img/chart/columbus_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/denver.html"><h4>Denver, CO</h4><div class="city_name_bar denver"></div><img src="img/chart/denver_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/houston.html"><h4>Houston, TX</h4><div class="city_name_bar houston"></div><img src="img/chart/houston_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/minneapolis.html"><h4>Minneapolis, MN</h4><div class="city_name_bar minneapolis"></div><img src="img/chart/minneapolis_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/newyork.html"><h4>New York, NY</h4><div class="city_name_bar newyork"></div><img src="img/chart/ny_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/sanfrancisco.html"><h4>San Francisco, CA</h4><div class="city_name_bar sanfran"></div><img src="img/chart/sanfran_chart.svg"></a></div>
+                    <div class="col_1 block city_graph"><a href="programs/washington.html"><h4>Washington, DC</h4><div class="city_name_bar washington"></div><img src="img/chart/washington_chart.svg"></a></div>
                 </section>
 
                 <section class="findings_text">
