--- a/measures.html
+++ b/measures.html
@@ -36,7 +36,7 @@
 
                 <nav class="nav_main col_2 block">
                     <li><a href="index.html">Overview</a></li>
-                    <li>Measures</li>
+                    <li><strong>Measures</strong></li>
                     <li><a href="about.html">About</a></li>
                 </nav>
             </header>
@@ -44,10 +44,10 @@
             <div class="body box">
 
                 <section class="intro_text">
-                        <div class="col_4 block">
-                            <h2>Measures</h2>
-                        </div>
-                    </section>
+                    <div class="col_4 block measures_title">
+                        <h2>Measures</h2><div class="title_bar"></div>
+                    </div>
+                </section>
 
                 <div class="col_1 block measures_subnav">
                     <nav>
